# Macro-Dashboard

./: .gitignore  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: refresh-cape.yml  refresh-market-probability.yml
.streamlit/: config.toml  secrets.toml.example
data/: cape.csv  ie_data.xls  market_probability_tracker.tsv  nber_recessions.csv  street_estimates.csv
notebooks/: methodology.ipynb
scripts/: refresh_cape.py  refresh_market_probability.py
src/: __init__.py
src/data/: __init__.py  cape.py  credit.py  fred_client.py  gdp.py  market_probability.py  nber.py  revisions.py  series_registry.py
src/models/: __init__.py  breadth.py  composite.py  conditions.py  early_warning.py  external.py  lame.py  market_implied.py  recession_ensemble.py  recession_probit.py  yield_curve.py
src/ui/: __init__.py  components.py  theme.py
src/ui/views/: __init__.py  cockpit.py  credit.py  curve.py  dashboard.py  early_warning.py  growth.py  lame.py  methodology.py  pulse.py  rate_path.py  recession.py
src/utils/: cache.py
tests/: conftest.py  test_breadth.py  test_cape.py  test_composite.py  test_credit.py  test_early_warning.py  test_gdp.py  test_lame.py  test_market_implied.py  test_market_probability.py  test_methodology_print.py  test_recession_ensemble.py  test_recession_probit.py  test_revisions.py  test_yield_curve.py
