[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-dashboard"
version = "0.1.0"
description = "A unified view of U.S. recession risk through three independent macro lenses."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Second Order Edge" }]
keywords = ["macro", "recession", "fred", "streamlit", "probit", "yield-curve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "streamlit>=1.30",
    "streamlit-option-menu>=0.3",
    "fredapi>=0.5",
    "statsmodels>=0.14",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.18",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "jupyter>=1.0",
    "nbformat>=5.9",
]

[project.urls]
Homepage = "https://github.com/SecondOrderEdge/Macro-Dashboard"
Repository = "https://github.com/SecondOrderEdge/Macro-Dashboard"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
